2004-12-24  Sebastien Bacher  <seb128@debian.org>

	* weather-metar.c: (metar_parse): fixed a crasher due to some typos in
	the parser (Closes: #162070).

2004-12-23  Sebastien Bacher  <seb128@debian.org>

	* weather-metar.c: (metar_parse): 
	patch from Ed Catmur <ed@catmur.co.uk> to only copy the datas
	when required (Closes: #161984).

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* weather-metar.c: Revert to a non-chained, more flexible METAR
	parser. Work by Frank Solensky.

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: File encoding glitches had broken special
	characters for Germany and France, fixed them up. There may be others.

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Remove duplicate YPXM and YPXX
	* gweather.schemas.in: Add schema for coordinates field
	* gweather-dialog.c: Hide weather.com button if we're not using maps
	  from weather.com

2004-12-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* gweather-pref.c: (gweather_pref_create):  Use HIG compliant
	label capitalization and fix table spacing.

2004-12-20  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* weather-metar.c: (metar_tok_time), (metar_tok_wind),
	(metar_tok_vis), (metar_tok_cloud), (metar_tok_pres),
	(metar_tok_temp), (metar_tok_cond), (metar_parse):
	returns next "state" of regexp parsing for metar_parse;
	"CAVOK" sets both visibility and cloud fields (#160475)

2004-12-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Fix bugs inadvertantly committed last time. XML
	  now parses.

2004-12-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Locations Love-in
	  Closes bugs:
		#159899: ralph@mail.pangea.at
		#159930: floam@sh.nu (Aaron Gyes)
		#160007: bugs@mavit.freeserve.co.uk (Peter Oliver)
		#160135: robrecht.jacques@advalvas.be (Robrecht Jacques)
		#160909: victor.osadci.gnome@rt.pmc.md (Victor Osadci)
		#161590: gandalf@owca.info (Jure Cuhalev)