@@ -19949,7 +19949,7 @@
       <coordinates>47-23-05N 009-42-02E</coordinates>
     </location>
     <location>
-      <_name>HÃ¶rsching</_name>
+      <_name>Hörsching</_name>
       <code>LOXL</code>
       <coordinates>48-14N 014-11E</coordinates>
     </location>
@@ -19974,7 +19974,7 @@
       <coordinates>48-14N 014-11E</coordinates>
     </location>
     <location>
-      <_name>VÃ¶slau</_name>
+      <_name>Vöslau</_name>
       <code>LOAV</code>
       <coordinates>47-57-52N 016-15-34E</coordinates>
     </location>
@@ -19989,7 +19989,7 @@
       <coordinates>48-30-53N 014-24-32E</coordinates>
     </location>
     <location>
-      <_name>Punitz-GÃ¼ssing</_name>
+      <_name>Punitz-Güssing</_name>
       <code>LOGG</code>
       <coordinates>47-08-51N 016-19-04E</coordinates>
     </location>
@@ -20738,12 +20738,12 @@
   <country>
     <_name>Moldova</_name>
     <location>
-      <_name>BÄlÅ£i-Leadoveni</_name>
+      <_name>Bălţi-Leadoveni</_name>
       <code>LUBL</code>
       <coordinates>47-50-03N 027-46-09E</coordinates>
     </location>
     <location>
-      <_name>ChiÅinÄu</_name>
+      <_name>Chişinău</_name>
       <code>LUKK</code>
       <coordinates>46-55-40N 028-55-51E</coordinates>
     </location>
@@ -20756,7 +20756,7 @@
   <country>
     <_name>Norway</_name>
     <location>
-      <_name>Alesund/Vigra</_name>
+      <_name>Ålesund/Vigra</_name>
       <code>ENAL</code>
       <coordinates>62-34N 006-07E</coordinates>
     </location>
@@ -20766,7 +20766,7 @@
       <coordinates>69-59N 023-22E</coordinates>
     </location>
     <location>
-      <_name>Andoya</_name>
+      <_name>Andøya</_name>
       <code>ENAN</code>
       <coordinates>69-18N 016-09E</coordinates>
     </location>
@@ -20781,7 +20781,7 @@
       <coordinates>69-04N 018-32E</coordinates>
     </location>
     <location>
-      <_name>Batsfjord</_name>
+      <_name>Båtsfjord</_name>
       <code>ENBS</code>
       <coordinates>70-38N 029-44E</coordinates>
     </location>
@@ -20796,22 +20796,22 @@
       <coordinates>70-52N 029-02E</coordinates>
     </location>
     <location>
-      <_name>Bjornoya</_name>
+      <_name>Bjørnøya</_name>
       <code>ENBJ</code>
       <coordinates>74-31N 019-01E</coordinates>
     </location>
     <location>
-      <_name>Bodo</_name>
+      <_name>Bodø</_name>
       <code>ENBO</code>
       <coordinates>67-16N 014-22E</coordinates>
     </location>
     <location>
-      <_name>Bronnoysund</_name>
+      <_name>Brønnøysund</_name>
       <code>ENBN</code>
       <coordinates>65-28N 012-13E</coordinates>
     </location>
     <location>
-      <_name>Bronnoysund/Bronnoy</_name>
+      <_name>Brønnøysund/Brønnøy</_name>
       <code>ENBN</code>
       <coordinates>65-28N 012-13E</coordinates>
     </location>
@@ -20841,12 +20841,12 @@
       <coordinates>61-00N 009-18E</coordinates>
     </location>
     <location>
-      <_name>Floro</_name>
+      <_name>Florø</_name>
       <code>ENFL</code>
       <coordinates>61-35N 005-02E</coordinates>
     </location>
     <location>
-      <_name>Forde/Bringeland</_name>
+      <_name>Førde/Bringeland</_name>
       <code>ENBL</code>
       <coordinates>61-27N 005-52E</coordinates>
     </location>
@@ -20871,7 +20871,7 @@
       <coordinates>70-29N 022-09E</coordinates>
     </location>
     <location>
-      <_name>Haugesund/Karmoy</_name>
+      <_name>Haugesund/Karmøy</_name>
       <code>ENHD</code>
       <coordinates>59-21N 005-13E</coordinates>
     </location>
@@ -20881,7 +20881,7 @@
       <coordinates>65-19-30N 002-19-36E</coordinates>
     </location>
     <location>
-      <_name>Honningsvag/Valan</_name>
+      <_name>Honningsvåg/Valan</_name>
       <code>ENHV</code>
       <coordinates>71-01N 025-59E</coordinates>
     </location>
@@ -20931,17 +20931,17 @@
       <coordinates>71-02N 027-50E</coordinates>
     </location>
     <location>
-      <_name>Mo I Rana/Rossvoll</_name>
+      <_name>Mo i Rana/Rossvoll</_name>
       <code>ENRA</code>
       <coordinates>66-22N 014-18E</coordinates>
     </location>
     <location>
-      <_name>Molde/Aro</_name>
+      <_name>Molde/Årø</_name>
       <code>ENML</code>
       <coordinates>62-45N 007-16E</coordinates>
     </location>
     <location>
-      <_name>Mosjoen</_name>
+      <_name>Mosjøen</_name>
       <code>ENMS</code>
       <coordinates>65-48N 013-08E</coordinates>
     </location>
@@ -20961,17 +20961,17 @@
       <coordinates>59-34N 009-13E</coordinates>
     </location>
     <location>
-      <_name>Ny-Alesund</_name>
+      <_name>Ny-Ålesund</_name>
       <code>ENAS</code>
       <coordinates>78-55N 011-56E</coordinates>
     </location>
     <location>
-      <_name>Orland</_name>
+      <_name>Ørland</_name>
       <code>ENOL</code>
       <coordinates>63-42N 009-36E</coordinates>
     </location>
     <location>
-      <_name>Orsta-Volda/Hovden</_name>
+      <_name>Ørsta-Volda/Hovden</_name>
       <code>ENOV</code>
       <coordinates>62-11N 006-04E</coordinates>
     </location>
@@ -20991,17 +20991,17 @@
       <coordinates>60-12N 011-05E</coordinates>
     </location>
     <location>
-      <_name>Roros</_name>
+      <_name>Røros</_name>
       <code>ENRO</code>
       <coordinates>62-35N 011-21E</coordinates>
     </location>
     <location>
-      <_name>Rorvik/Ryum</_name>
+      <_name>Rørvik/Ryum</_name>
       <code>ENRM</code>
       <coordinates>64-50N 011-09E</coordinates>
     </location>
     <location>
-      <_name>Rost</_name>
+      <_name>Røst</_name>
       <code>ENRS</code>
       <coordinates>67-31N 012-06E</coordinates>
     </location>
@@ -21016,7 +21016,7 @@
       <coordinates>61-50N 006-07E</coordinates>
     </location>
     <location>
-      <_name>Sandnessjoen/Stokka</_name>
+      <_name>Sandnessjøen/Stokka</_name>
       <code>ENST</code>
       <coordinates>65-58N 012-28E</coordinates>
     </location>
@@ -21026,12 +21026,12 @@
       <coordinates>59-11N 009-34E</coordinates>
     </location>
     <location>
-      <_name>Sogndal/Haukasen</_name>
+      <_name>Sogndal/Haukåsen</_name>
       <code>ENSG</code>
       <coordinates>61-09N 007-08E</coordinates>
     </location>
     <location>
-      <_name>Sorkjosen</_name>
+      <_name>Sørkjosen</_name>
       <code>ENSR</code>
       <coordinates>69-47N 020-58E</coordinates>
     </location>
@@ -21041,7 +21041,7 @@
       <coordinates>58-53N 005-38E</coordinates>
     </location>
     <location>
-      <_name>Stord/Sorstokken</_name>
+      <_name>Stord/Sørstokken</_name>
       <code>ENSO</code>
       <coordinates>59-48N 005-21E</coordinates>
     </location>
@@ -21061,7 +21061,7 @@
       <coordinates>70-21N 031-03E</coordinates>
     </location>
     <location>
-      <_name>Svolvaer/Helle</_name>
+      <_name>Svolvær/Helle</_name>
       <code>ENSH</code>
       <coordinates>68-15N 014-40E</coordinates>
     </location>
@@ -21071,7 +21071,7 @@
       <coordinates>59-12N 010-16E</coordinates>
     </location>
     <location>
-      <_name>Tromso/Langnes</_name>
+      <_name>Tromsø/Langnes</_name>
       <code>ENTC</code>
       <coordinates>69-41N 018-55E</coordinates>
     </location>
@@ -21081,12 +21081,12 @@
       <coordinates>63-28N 010-56E</coordinates>
     </location>
     <location>
-      <_name>Vadso</_name>
+      <_name>Vadsø</_name>
       <code>ENVD</code>
       <coordinates>70-04N 029-51E</coordinates>
     </location>
     <location>
-      <_name>Voss-Bo</_name>
+      <_name>Voss/Bømoen</_name>
       <code>ENBM</code>
       <coordinates>60-39N 006-30E</coordinates>
     </location>
@@ -21914,37 +21914,37 @@
   <country>
     <_name>Sweden</_name>
     <location>
-      <_name>Ãngelholm</_name>
+      <_name>Ängelholm</_name>
       <code>ESDB</code>
       <coordinates>56-18N 012-51E</coordinates>
     </location>
     <location>
-      <_name>BorlÃ¤nge</_name>
+      <_name>Borlänge</_name>
       <code>ESSD</code>
       <coordinates>60-26N 015-31E</coordinates>
     </location>
     <location>
-      <_name>GÃ¤llivare</_name>
+      <_name>Gällivare</_name>
       <code>ESNG</code>
       <coordinates>67-09N 020-39E</coordinates>
     </location>
     <location>
-      <_name>GÃ¤vle</_name>
+      <_name>Gävle</_name>
       <code>ESSK</code>
       <coordinates>60-36N 016-57E</coordinates>
     </location>
     <city>
-      <!-- This is the second largest city in Sweden. Its native name is "GÃ¶teborg". -->
+      <!-- This is the second largest city in Sweden. Its native name is "Göteborg". -->
       <_name>Gothenburg</_name>
       <location>
-        <!-- This is the name of a Gothenburg (GÃ¶teborg) airport.  -->
+        <!-- This is the name of a Gothenburg (Göteborg) airport.  -->
         <_name>Landvetter</_name>
         <code>ESGG</code>
         <coordinates>57-40N 012-18E</coordinates>
       </location>
       <location>
-        <!-- This is the name of a Gothenburg (GÃ¶teborg) airport.  -->
-        <_name>SÃ¤ve</_name>
+        <!-- This is the name of a Gothenburg (Göteborg) airport.  -->
+        <_name>Säve</_name>
         <code>ESGP</code>
         <coordinates>57-47N 011-53E</coordinates>
       </location>
@@ -21975,7 +21975,7 @@
       <coordinates>66-38N 019-39E</coordinates>
     </location>
     <location>
-      <_name>JÃ¶nkÃ¶ping</_name>
+      <_name>Jönköping</_name>
       <code>ESGJ</code>
       <coordinates>57-46N 014-05E</coordinates>
     </location>
@@ -22003,21 +22003,21 @@
       <_name>Kristianstad</_name>
       <location>
         <!-- This is the name of an airport outside of Kristianstad, Sweden. -->
-        <_name>EverÃ¶d</_name>
+        <_name>Everöd</_name>
         <code>ESMK</code>
         <coordinates>55-55N 014-05E</coordinates>
       </location>
     </city>
     <city>
-     <_name>LinkÃ¶ping</_name>
+     <_name>Linköping</_name>
      <location>
-       <!-- This is the name of an airport in LinkÃ¶ping, Sweden. -->
+       <!-- This is the name of an airport in Linköping, Sweden. -->
        <_name>Malmen</_name>
        <code>ESCF</code>
        <coordinates>58-24N 015-31E</coordinates>
      </location>
      <location>
-       <!-- This is the name of an airport in LinkÃ¶ping, Sweden. -->
+       <!-- This is the name of an airport in Linköping, Sweden. -->
        <_name>Saab</_name>
        <code>ESSL</code>
        <coordinates>58-24N 015-41E</coordinates>
@@ -22037,9 +22037,9 @@
      </location>
     </city>
     <city>
-      <_name>LuleÃ¥</_name>
+      <_name>Luleå</_name>
       <location>
-        <!-- This is the name of an airport in LuleÃ¥, Sweden. -->
+        <!-- This is the name of an airport in Luleå, Sweden. -->
         <_name>Kallax</_name>
         <code>ESPA</code>
         <coordinates>65-33N 022-08E</coordinates>
@@ -22051,34 +22051,34 @@
       <coordinates>64-32-51N 018-43-03E</coordinates>
     </location>
     <city>
-      <_name>MalmÃ¶</_name>
+      <_name>Malmö</_name>
       <location>
-        <!-- This is the name of an airport outside of MalmÃ¶, Sweden. -->
+        <!-- This is the name of an airport outside of Malmö, Sweden. -->
         <_name>Sturup</_name>
         <code>ESMS</code>
         <coordinates>55-33N 013-22E</coordinates>
       </location>
     </city>
     <location>
-      <_name>NorrkÃ¶ping</_name>
+      <_name>Norrköping</_name>
       <code>ESSP</code>
       <coordinates>58-35N 016-09E</coordinates>
     </location>
     <location>
-      <_name>Ãrebro</_name>
+      <_name>Örebro</_name>
       <code>ESOE</code>
       <coordinates>59-14N 015-03E</coordinates>
     </location>
     <location>
-      <_name>ÃrnskÃ¶ldsvik</_name>
+      <_name>Örnsköldsvik</_name>
       <code>ESNO</code>
       <coordinates>63-24N 018-58E</coordinates>
     </location>
     <city>
-      <_name>Ãstersund</_name>
+      <_name>Östersund</_name>
       <location>
-        <!-- This is the name of an airport outside of Ãstersund, Sweden. -->
-        <_name>FrÃ¶sÃ¶n</_name>
+        <!-- This is the name of an airport outside of Östersund, Sweden. -->
+        <_name>Frösön</_name>
         <code>ESPC</code>
         <coordinates>63-11N 014-30E</coordinates>
       </location>
@@ -22089,7 +22089,7 @@
       <coordinates>56-16N 015-17E</coordinates>
     </location>
     <location>
-      <_name>SÃ¥tenÃ¤s</_name>
+      <_name>Såtenäs</_name>
       <code>ESIB</code>
       <coordinates>58-26N 012-42E</coordinates>
     </location>
@@ -22099,17 +22099,17 @@
       <coordinates>60-58N 014-31E</coordinates>
     </location>
     <location>
-      <_name>SkellefteÃ¥</_name>
+      <_name>Skellefteå</_name>
       <code>ESNS</code>
       <coordinates>64-38N 021-05E</coordinates>
     </location>
     <location>
-      <_name>SkÃ¶vde</_name>
+      <_name>Skövde</_name>
       <code>ESGR</code>
       <coordinates>58-27N 013-58E</coordinates>
     </location>
     <location>
-      <_name>SÃ¶derhamn</_name>
+      <_name>Söderhamn</_name>
       <code>ESNY</code>
       <coordinates>61-15-41N 017-05-57E</coordinates>
     </location>
@@ -22135,17 +22135,17 @@
       </location>
     </city>
     <location>
-      <_name>Sundsvall-HÃ¤rnÃ¶sand</_name>
+      <_name>Sundsvall-Härnösand</_name>
       <code>ESNN</code>
       <coordinates>62-32N 017-27E</coordinates>
     </location>
     <location>
-      <_name>TrollhÃ¤ttan</_name>
+      <_name>Trollhättan</_name>
       <code>ESGT</code>
       <coordinates>58-19N 012-21E</coordinates>
     </location>
     <location>
-      <_name>UmeÃ¥</_name>
+      <_name>Umeå</_name>
       <code>ESNU</code>
       <coordinates>63-48N 020-17E</coordinates>
     </location>
@@ -22155,16 +22155,16 @@
       <coordinates>59-53N 017-36E</coordinates>
     </location>
     <city>
-      <_name>VÃ¤sterÃ¥s</_name>
+      <_name>Västerås</_name>
       <location>
-        <!-- This is in VÃ¤sterÃ¥s, Sweden. -->
-        <_name>HÃ¤sslÃ¶</_name>
+        <!-- This is in Västerås, Sweden. -->
+        <_name>Hässlö</_name>
         <code>ESOW</code>
         <coordinates>59-35N 016-38E</coordinates>
       </location>
     </city>
     <location>
-      <_name>VÃ¤xjÃ¶</_name>
+      <_name>Växjö</_name>
       <code>ESMX</code>
       <coordinates>56-51N 014-50E</coordinates>
     </location>
@@ -22862,7 +22862,7 @@
       <coordinates>46-13N 002-22E</coordinates>
     </location>
     <location>
-      <_name>Montpellier/MÃ©diterranÃ©e</_name>
+      <_name>Montpellier/Méditerranée</_name>
       <code>LFMT</code>
       <coordinates>43-35N 003-58E</coordinates>
     </location>
@@ -22896,7 +22896,7 @@
       <coordinates>47-00N 003-06E</coordinates>
     </location>
     <location>
-      <_name>Nice/CÃ´te d'Azur</_name>
+      <_name>Nice/Côte d'Azur</_name>
       <code>LFMN</code>
       <coordinates>43-39N 007-12E</coordinates>
     </location>
@@ -22946,7 +22946,7 @@
       <coordinates>48-44N 002-24E</coordinates>
     </location>
     <location>
-      <_name>Pau/PyrÃ©nÃ©es</_name>
+      <_name>Pau/Pyrénées</_name>
       <code>LFBP</code>
       <coordinates>43-23N 000-25W</coordinates>
     </location>
@@ -23297,7 +23297,7 @@
         <coordinates>53-32N 009-50E</coordinates>
       </location>
       <location>
-        <_name>FuhlsbÃ¼ttel Airport</_name>
+        <_name>Fuhlsbüttel Airport</_name>
         <code>EDDH</code>
         <coordinates>53-38N 010-00E</coordinates>
       </location>
@@ -23340,7 +23340,7 @@
         <coordinates>52-18N 010-27E</coordinates>
       </location>
       <location>
-        <_name>BÃ¼ckeburg</_name>
+        <_name>Bäckeburg</_name>
         <code>ETHB</code>
         <coordinates>52-17N 009-05E</coordinates>
       </location>
@@ -23490,7 +23490,7 @@
       <!-- TRANSLATOR: local name of Rhineland-Palatinate is Rheinland-Pfalz -->
       <_name>Rhineland-Palatinate</_name>
       <location>
-        <_name>BÃ¼chel</_name>
+        <_name>Bächel</_name>
         <code>ETSB</code>
         <coordinates>50-10N 007-04E</coordinates>
       </location>
@@ -23564,7 +23564,7 @@
         <coordinates>54-38N 009-21E</coordinates>
       </location>
       <location>
-        <_name>GlÃ¼cksburg/Meierwik</_name>
+        <_name>Glücksburg/Meierwik</_name>
         <code>ETGG</code>
         <coordinates>54-50N 009-30E</coordinates>
       </location>
@@ -23607,7 +23607,7 @@
       </location>
     </state>
     <state>
-      <!-- TRANSLATOR: local name of Thuringia is ThÃ¼ringen -->
+      <!-- TRANSLATOR: local name of Thuringia is Thüringen -->
       <_name>Thuringia</_name>
       <location>
         <_name>Altenburg-Nobitz</_name>
@@ -23984,7 +23984,7 @@
   <country>
     <_name>Hungary</_name>
     <location>
-      <_name>BÃ©kÃ©scsaba</_name>
+      <_name>Békéscsaba</_name>
       <code>LHBC</code>
       <coordinates>46-41N 021-10E</coordinates>
     </location>
@@ -24067,12 +24067,12 @@
       <coordinates>47-16N 016-38E</coordinates>
     </location>
     <location>
-      <_name>TaszÃ¡r</_name>
+      <_name>Taszár</_name>
       <code>LHTA</code>
       <coordinates>46-24N 017-55E</coordinates>
     </location>
     <location>
-      <_name>TÃ¶kÃ¶l</_name>
+      <_name>Tököl</_name>
       <code>LHTL</code>
       <coordinates>47-21N 018-59E</coordinates>
     </location>
