@@ -1,3 +1,7 @@
+2004-12-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Locations.xml.in: Fix up a bunch of encoding errors.
+
 2004-12-24  Sebastien Bacher  <seb128@debian.org>
 
 	* weather-metar.c: (metar_parse): fixed a crasher due to some typos in
